--- a/tests/dummy/app/templates/demo.hbs
+++ b/tests/dummy/app/templates/demo.hbs
@@ -2,6 +2,6 @@
   items=model.items
   selectedItems=model.selectedItems
   titleAttr=model.titleAttr
-  subtitleAtrr=model.subtitleAtrr
+  subtitleAttr=model.subtitleAttr
   valueAttr=model.valueAttr
 }}
