--- a/addon/styles/ember-frost-buckets.scss
+++ b/addon/styles/ember-frost-buckets.scss
@@ -2,16 +2,23 @@
 
 .frost-buckets {
   display: inline-block;
-  h1 {
-    font-size: 20px;
+  font-family: $frost-font-family;
+  vertical-align: top;
+  h1.frost-bucket-item-title {
+    font-size: $frost-font-l;
+  }
+  p.frost-bucket-item-title {
+    font-size: $frost-font-m;
   }
   .frost-selected-bucket, .frost-non-selected-bucket {
     padding-right: 10px;
     width: 500px;
+    height: calc(100% - 40px);
     display: inline-block;
     border: 2px solid $frost-color-lgrey-1;
   }
   .frost-bucket-item {
+    background-color: $frost-color-lgrey-4;
     border: 2px solid $frost-color-night-3;
     margin: 2px;
     padding-left: 5px;
