--- a/addon/styles/ember-frost-buckets.scss
+++ b/addon/styles/ember-frost-buckets.scss
@@ -4,37 +4,49 @@
   display: inline-block;
   font-family: $frost-font-family;
   vertical-align: top;
-  h1.frost-bucket-item-title {
-    font-size: $frost-font-l;
+
+  h1 {
+    &.frost-bucket-item-title {
+      font-size: $frost-font-l;
+    }
   }
-  p.frost-bucket-item-title {
-    font-size: $frost-font-m;
+
+  p {
+    &.frost-bucket-item-title {
+      font-size: $frost-font-m;
+    }
   }
-  .frost-selected-bucket, .frost-non-selected-bucket {
-    padding-right: 10px;
+
+  .frost-selected-bucket,
+  .frost-non-selected-bucket {
+    display: inline-block;
     width: 500px;
     height: calc(100% - 40px);
-    display: inline-block;
+    padding-right: 10px;
     border: 2px solid $frost-color-lgrey-1;
   }
+
   .frost-bucket-item {
-    background-color: $frost-color-lgrey-4;
-    border: 2px solid $frost-color-night-3;
     margin: 2px;
     padding-left: 5px;
+    border: 2px solid $frost-color-night-3;
+    background-color: $frost-color-lgrey-4;
   }
+
   .frost-hovered-bucket-item {
     border: 2px solid $frost-color-blue-1;
   }
+
   .frost-bucket-controls {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
+
     .frost-button {
-      background-color: $frost-color-blue-1;
-      height: 40px;
       width: 100px;
+      height: 40px;
+      background-color: $frost-color-blue-1;
     }
   }
 }
